# hostile-planets-old

./: .gitignore  Cargo.toml  README.md  build-hpclient-dx12-release.ps1  build-hpclient-dx12.ps1  build-hpclient-gl-release.ps1  build-hpclient-gl.ps1  build-hpclient-vulkan-release.ps1  build-hpclient-vulkan.ps1  build-hpserver-release.ps1  build-hpserver.ps1  build-release.ps1  build.ps1  clientconf.toml  docs-hpclient.ps1  docs-hpserver.ps1  hp.py  hpclient.py  hpserver.py  run.ps1  serverconf.toml
data/: quad.frag  quad.vert
data/images/: logo-with-blue-bg.xcf
data/models/cube/: cube.glb
data/shaders/: cube.frag
hpclient/: Cargo.toml
hpclient/assets/biped_robot/: LICENSE
hpclient/src/: adapter_state.rs  asset_loader.rs  backend.rs  backend_state.rs  buffer_state.rs  client.rs  client_lib.rs  color.rs  color_range.rs  conf.rs  cube.rs  cube_data.rs  desc_set.rs  desc_set_layout.rs  device_state.rs  dimensions.rs  dims.rs  framebuffer_state.rs  gltf_object.rs  image_state.rs  lib.rs  object.rs  object_data.rs  pipeline_state.rs  quad.rs  render_pass_state.rs  renderer_state.rs  surface_trait.rs  swapchain_state.rs  uniform.rs  uniform_matrices_data.rs  vertex.rs  window.rs  window_data.rs  window_state.rs  window_type.rs
hpserver/: Cargo.toml
hpserver/src/: conf.rs  lib.rs  player.rs  scout.rs  server.rs  unit.rs
