[package]
name = "hostile-planets-client"
version = "0.1.0"
authors = ["Jeremy Carter <Jeremy@JeremyCarter.ca>"]

[lib]
name = "hpclient"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
# piston_window = "0.80"
timer = "0.1.3"
chrono = "0.4"
# shader_version = "0.3"
# camera_controllers = "0.24"
gfx = "0.17"
# gfx_device_gl = "0.15"
# vecmath = "0.3"

[dependencies.gltf]
version = "0.11"
features = ["extras", "names"]

[dependencies.cpython]
version = "0.1"
features = ["extension-module"]
