[package]
name = "hpclient"
version = "0.1.0"
authors = ["Jeremy Carter <Jeremy@JeremyCarter.ca>"]

[features]
default = ["vulkan"]
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[lib]
name = "hpclient"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
timer = "0.1.3"
chrono = "0.4"
env_logger = "0.5"
image = "0.18"
log = "0.4"
winit = "0.16"
glsl-to-spirv = "0.1"
gfx-hal = { path = "../../gfx/src/hal", version = "0.1" }
gfx-backend-empty = { path = "../../gfx/src/backend/empty", version = "0.1" }

[dependencies.cgmath]
version = "0.16"
features = ["swizzle"]

[dependencies.gfx-backend-gl]
path = "../../gfx/src/backend/gl"
version = "0.1"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
path = "../../gfx/src/backend/vulkan"
version = "0.1"
#features = ["glsl-to-spirv"]
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
path = "../../gfx/src/backend/metal"
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
path = "../../gfx/src/backend/dx12"
version = "0.1"
optional = true

[dependencies.gltf]
version = "0.11"
features = ["extras", "names"]

[dependencies.cpython]
version = "0.1"
features = ["extension-module"]
