[package]
name = "hpserver"
version = "0.1.0"
authors = ["Jeremy Carter <Jeremy@JeremyCarter.ca>"]

[lib]
name = "hpserver"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"

[dependencies.cpython]
version = "0.1"
features = ["extension-module"]
